--- a/RestierTestWebApplication/Web.config
+++ b/RestierTestWebApplication/Web.config
@@ -17,6 +17,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+	<identity impersonate="true" />
   </system.web>
   <connectionStrings>
     <add name="Entities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=TEST_DB;Integrated Security=SSPI;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
